2003-01-31  Just van Rossum <just@letterror.com>
    * Added autoGIL extension module.  It's a top-level module as it's not
      Cocoa- or PyObjC-specific. In fact it may end up in the Python
      distribution at some point.  autoGIL.installAutoGIL() is called at
      the end of Foundation/__init__.py. This installs a callback in the
      CFRunLoop for the main thread, that releases the Global Interpreter
      Lock when the event loop goes to sleep, and acquires it again when it
      wakes up.  This allows other Python threads to run while an app is
      inside the event loop.

2003-01-25  Bill Bumgarner  <bbum@codefab.com>
    * Modules/objc/libffi_support.m: Modified such that a Python based
      implementation can be stuck onto an objc class through the user of a
      closure to carry along the Python callable.   See classAddMethods().
    * Modules/objc/module.m: Added classAddMethods()
    * Lib/objc/test/test_methodedits.py: unit tests for classAddMethods().
      One currently fails due to a bug in PyObjC.

2003-01-23  Bill Bumgarner  <bbum@codefab.com>
    * setup.py (USE_FFI): Enabled FFI.  Refactored setup.py slightly to push
      FFI configuration to top.

2003-01-20  Bill Bumgarner  <bbum@codefab.com>
    * Lib/Foundation/Conversion.py: Fixed tests to ensure that "" and 0 are
      not counted as None.

2003-01-18  Just van Rossum <just@letterror.com>
    * Make AppKit.NSApplicationMain() propagate exceptions back to Python.
    * Include the entire exception info (type, value and traceback) when
      converting a Python exception to an NSException. This is needed to
      get a complete traceback.

2003-01-18  Ronald Oussoren <oussoren@cistron.nl>
    * Remove the PyOBJC_UNIQUE_PROXY option, it is always on anyway.
    * Remove mechanism for registering methods that return a 'new'
      instead of a 'borrowed' reference. This mechanism is too
      simplistic.
    * Initial support for special support of init methods: These return